# yt-vi-summarized

./: .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USER_MANUAL.md  app.json  app.py  main.py  pyproject.toml  replit.md  requirements.txt  setup.sh
src/youtube_summarizer/: __init__.py  summarizer.py  utils.py
